# ai-learning-embedded

./: .gitignore  README.md  README_GITHUB.md  requirements.txt  setup.sh  test_setup.py
01-fastai-basics/: README.md  fastai_classifier.py  simple_example.py
02-pytorch-equivalent/: README.md  pytorch_classifier.py
03-custom-loss-functions/: README.md  custom_loss_example.py  custom_loss_example_with_issues.py  pyproject.toml  requirements_with_issues.txt  setup.py  simple_test.py
04-model-quantization/: README.md  quantization_example.py
05-edge-deployment/: README.md  deployment_example.py
utils/: model_utils.py
